--- a/src/Pages/HomePage/Products/ProductLists.css
+++ b/src/Pages/HomePage/Products/ProductLists.css
@@ -9,7 +9,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 130%;
     width: 100%;
     background: rgba(0, 0, 0, 0);
     color: white;
@@ -37,7 +37,7 @@
 }
 .image__description{
     font-size: 1.2em;
-    margin-top: 0.25em;
+    margin-top: 2rem;
 
 }
 
